# mygarmindash

./: .gitignore  README.md  dev.ps1
.claude/: settings.json
pwa/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
pwa/public/: manifest.webmanifest  sw.js
pwa/public/icons/: README.md
pwa/src/: app.tsx  main.tsx  styles.css  vite-env.d.ts
pwa/src/api/: client.ts  hooks.ts  types.ts
pwa/src/components/: activity-calendar.tsx  chart.tsx  collapsible-card.tsx  exercise-sets.tsx  nav.tsx  state.tsx  ui.tsx  workout-card.tsx
pwa/src/lib/: auth.ts  format.ts  garmin.ts  persister.ts
pwa/src/routes/: activities.tsx  activity-detail.tsx  exercise.tsx  exercises.tsx  home.tsx  settings.tsx
pwa/tests/: format.test.ts  garmin.test.ts
sync/: .env.example  README.md  config.toml  pyproject.toml  scheduled-task.xml.example  sync_to_cloud.py
sync/tests/: conftest.py  test_sync.py
worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/src/: auth.ts  db.ts  index.ts  queries.ts
worker/tests/: auth.test.ts  queries.test.ts
